Fix contrast of select

--- a/chrome/player/assets/fluidplayer/css/colors.css
+++ b/chrome/player/assets/fluidplayer/css/colors.css
@@ -36,7 +36,7 @@ body {
     --popwindow-text-color: rgba(255, 255, 255, 0.8);
     --popwindow-button-background-color: rgb(20, 20, 20);
     --popwindow-button-text-color: rgb(200, 200, 200);
-    --popwindow-button-titletext-color: rgb(98, 98, 98);
+    --popwindow-button-titletext-color: rgb(163, 163, 163);
     --popwindow-button-hover-background-color: rgb(30, 30, 30);
     --popwindow-button-active-background-color: rgb(0, 135, 153);
     --popwindow-dropdown-item-background-color: rgb(30, 30, 30);
